<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Invaders</string>
    <string name="loading">Loading...</string>
    <string name="play">Play</string>
    <string name="build_ship">Build Ship</string>
    <string name="options">Options</string>
    <string name="credits">Credits</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="highscore">Highscore</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="start_menu">Start Menu</string>
    <string name="game_over">Game Over</string>
    <string name="back">Back</string>
    <string name="rank">Rank</string>
    <string name="points">Points</string>
    <string name="points_colon">Points:</string>
    <string name="wave">Wave</string>
    <string name="wave_colon">Wave:</string>
    <string name="new_record">New Record!</string>
    <string name="soundtrack_colon">Soundtrack:</string>
    <string name="sound_effects_colon">Sound Effects:</string>
    <string name="credits_text">von Paul Wenzel (c)</string>

</resources>
