<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout.MainLinearLayout">

    
    <LinearLayout
        style="@style/Layout.CenterLinearLayout" >

		<View
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"/>

	    <!-- Überschrift -->
	    <com.dreede.spaceinvaders.view.FontTextView
			style="@style/Widget.TextView.H.H1"
	        android:text="@string/credits"
	        android:textColor="@color/red"
		/>

	    <ScrollView
	        style="@style/Layout.ScrollView">
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:orientation="vertical" >
		        
		        
			    <com.dreede.spaceinvaders.view.FontTextView
					style="@style/Widget.TextView.T.Normal"
			        android:text="@string/credits_text"
			        android:textColor="@color/red"
				/>
		        
		    </LinearLayout>
	    </ScrollView>

			<View
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"/>

	  </LinearLayout>
    
    <com.dreede.spaceinvaders.view.FontButton
        android:id="@+id/buttonBackCreditsMenu"
        style="@style/Widget.Control.MenuButton"
        android:layout_gravity="left"
        android:text="@string/back" />
    
</LinearLayout>